# mdl

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: string.cpp  string.hpp  timer.cpp  timer.hpp
src/test/: mdl_test.cpp
